--- a/portales_mapa.html
+++ b/portales_mapa.html
@@ -443,7 +443,7 @@ function addLocationButton() {
             
             // Cargar datos
             showLoading(true);
-            cargarDatosDesdeURL('portales.csv');
+            cargarDatosDesdeURL('nuevosPortales.csv');
         });
         document.addEventListener('DOMContentLoaded', addLocationButton);
     </script>
